--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,10 +6,10 @@ $font: 'VT323';
 // Pallete
 $background: rgb(200, 45, 50);
 $body: rgb(212, 217, 211);
-$screen: rgb(124, 143, 20);
+$screen: #8CA117;
 $screenBorder: rgb(118, 126, 147);
 $startSelect: rgb(200, 202, 208);
 $buttons: rgb(154, 50, 93);
-$direction: rgb(24, 25, 34);
+$direction: #222330;
 $text: rgb(57, 70, 105);
 $notSure: rgb(188, 211, 156);
