--- a/styles/index.scss
+++ b/styles/index.scss
@@ -30,6 +30,7 @@ body {
     min-height: 34rem;
     top: 6rem;
     left: 20rem;
+    border: 1px solid $screenBorder;
     @include body-border;
     @include body-shadow;
   }
@@ -38,12 +39,72 @@ body {
     position: absolute;
     z-index: 1;
     background: $screenBorder;
-    border-radius: 1rem 1rem 4rem 1rem;
+    border-radius: 1rem 1rem 3rem 1rem;
     border: .75px solid #42454D;
     min-width: 18rem;
     min-height: 14rem;
     top: 8.5rem;
     left: 22.25rem;
+
+    .screen {
+      position: absolute;
+      margin: 1.25rem 2.8rem;
+      background-color: $screen;
+      min-height: 80%;
+      min-width: 67%;
+      border-radius: .25rem;
+      border: .75px solid #2F3608;
+      -webkit-box-shadow: inset -3px 7px 7px 6px rgba(47,54,8,0.4); 
+      box-shadow: inset -3px 7px 7px 6px rgba(47,54,8,0.4);
+    }
+  }
+
+  .directional {
+    position: absolute;
+    z-index: 1;
+    top: 26rem;
+    left: 24rem;
+
+    .arrow {
+      background: $direction;
+      height: 5rem;
+      position: absolute;
+      width: 1.75rem;
+      border-radius: .5rem;
+      // border: 1px solid #111118;
+      -webkit-box-shadow: -6px 7px 5px -4px rgba(17,17,24,0.5); 
+      box-shadow: -6px 7px 5px -4px rgba(17,17,24,0.5);
+
+    
+      &::after {
+        background: $direction;
+        content: '';
+        height: 1.75rem;
+        left: -1.6rem;
+        position: absolute;
+        top: 1.5rem;
+        width: 5rem;
+        border-radius: .5rem;
+        // border: 1px solid #111118;
+        -webkit-box-shadow: -6px 6px 5px -4px rgba(17,17,24,0.5); 
+        box-shadow: -6px 6px 5px -4px rgba(17,17,24,0.5);
+      }
+    }
+
+    .circle {
+      background: transparent;
+      opacity: .08;
+      position: absolute;
+      content: '';
+      width: 1rem;
+      height: 1rem;
+      left: .4rem;
+      top: 1.8rem;
+      border-radius: 50%;
+      border: 1px solid white;
+      -webkit-box-shadow: inset 9px -7px 12px -8px rgba(255,255,255,0.4); 
+      box-shadow: inset 9px -7px 12px -8px rgba(255,255,255,0.4);
+    }
   }
 
 }
