--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,7 +5,7 @@ $font: 'VT323';
 
 // Pallete
 $background: rgb(200, 45, 50);
-$body: rgb(212, 217, 211);
+$body: #d4d9d3;
 $screen: #8CA117;
 $screenBorder: rgb(118, 126, 147);
 $startSelect: rgb(200, 202, 208);
