--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,7 +9,7 @@ $body: #d4d9d3;
 $screen: #8CA117;
 $screenBorder: rgb(118, 126, 147);
 $startSelect: rgb(200, 202, 208);
-$buttons: rgb(154, 50, 93);
+$buttons: #9a325d;
 $direction: #222330;
 $text: rgb(57, 70, 105);
 $notSure: rgb(188, 211, 156);
