--- a/styles/index.css
+++ b/styles/index.css
@@ -54,7 +54,7 @@ body .gameboy {
   left: 20rem;
   border: 1px solid #222330;
   border-radius: 0.75rem 0.75rem 5rem 0.75rem;
-  box-shadow: -14px 22px 24px 16px rgba(0, 0, 0, 0.35), inset 5px -5px 9px 0px rgba(78, 87, 76, 0.95);
+  box-shadow: -14px 22px 24px 16px rgba(0, 0, 0, 0.35), inset 5px -5px 9px 0px rgba(78, 87, 76, 0.95), inset -13px 18px 10px -7px rgba(234, 236, 233, 0.95);
 }
 body .screen-border {
   position: absolute;
@@ -85,44 +85,56 @@ body .directional {
 }
 body .directional .arrow {
   background: #222330;
-  height: 5rem;
+  height: 5.5rem;
   position: absolute;
-  width: 1.75rem;
+  width: 2rem;
   border-radius: 0.45rem;
   box-shadow: -6px 7px 5px -4px rgba(17, 17, 24, 0.5);
 }
 body .directional .arrow::after {
   background: #222330;
   content: "";
-  height: 1.75rem;
-  left: -1.6rem;
+  height: 2rem;
+  left: -1.7rem;
   position: absolute;
-  top: 1.5rem;
-  width: 5rem;
+  top: 1.75rem;
+  width: 5.5rem;
   border-radius: 0.45rem;
   box-shadow: -6px 6px 5px -4px rgba(17, 17, 24, 0.5);
 }
 body .directional .circle {
   background: transparent;
-  opacity: 0.08;
+  opacity: 0.2;
   position: absolute;
   content: "";
-  width: 1rem;
-  height: 1rem;
+  width: 1.25rem;
+  height: 1.25rem;
   left: 0.4rem;
-  top: 1.8rem;
+  top: 2.05rem;
   border-radius: 50%;
-  border: 1px solid white;
-  box-shadow: inset 9px -7px 12px -8px rgba(255, 255, 255, 0.4);
+  border: 1px solid #66688f;
+  box-shadow: inset 11px -8px 7px -8px rgba(219, 220, 230, 0.65);
 }
 body .buttons {
+  background-color: #E0E3DE;
   display: flex;
+  position: absolute;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  left: 33rem;
+  top: 29rem;
+  padding: 0.15rem;
+  border-radius: 2rem;
+  transform: rotate(-35deg);
+  box-shadow: inset -8px 13px 8px -8px rgba(162, 171, 156, 0.95);
 }
 body .buttons div {
+  margin: 0.45rem;
   background-color: #9a325d;
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2.7rem;
+  height: 2.7rem;
   border: 0.5px solid #222330;
   border-radius: 50%;
-  box-shadow: -4px 8px 11px -3px rgba(34, 35, 48, 0.7);
+  box-shadow: -8px 9px 8px -6px rgba(0, 0, 0, 0.5), inset -8px 9px 8px -8px #E1A3BD;
 }
